[package]
name = "aviator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
poise = "0.6.1"
serenity = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] } # for our async runtime    
hostname = "^0.4" # I was lazy dont @ me - Caznix
sysinfo = "0.31.4"
